feat: abstraction over ik